--- a/src/photos/photo-detail.html
+++ b/src/photos/photo-detail.html
@@ -15,7 +15,7 @@
         <div class="row">
             <div class="col-md-7" style="display:flex;flex-direction:column;" click.trigger="open_full_size_photo()">
                 <img src.bind="photo_src" width="${photo_width}" />
-                <span dir="${theme.rtltr}" style="float:left;" if.bind="photographer_name">${'photos.photographer-name' & t}: ${photographer_name}</span>
+                <span dir="${theme.rtltr}" if.bind="photographer_name">${'photos.photographer-name' & t}: ${photographer_name}</span>
                 <date-range label="photos.photo-date" 
                     base_date_str.bind="photo_date_str" 
                     hide_label_if_no_date.bind="true"
