--- a/src/stories/stories.html
+++ b/src/stories/stories.html
@@ -2,8 +2,6 @@
     <section class="container content-area" id="stories-page">
         <div class="row content-area" dir="${theme.rtltr}">
             <div class="row" id="story-list">
-                <div class="col-md-1">
-                </div>
                 <div class="col-md-8 col-sm-12" if.bind="! editing_filters">
                     <div class="row">
                         <form class="form-inline">
@@ -62,7 +60,7 @@
                             </div>
                         </form>
                     </div>
-                    <h3 if.bind="no_results" innerhtml.bind="'no-results' & t">
+                    <h3 if.bind="no_results" innerhtml.bind="'no-results' & t" style="width:90%;margin-right:auto;margin-left:auto;">
                     </h3>
                     <button class="btn btn-basic btn-sm btn-framed" 
                         if.bind="theme.width<1200" 
@@ -111,7 +109,7 @@
                     </ul>
 
                 </div>
-                <div class="col-md-3 col-sm-12" if.bind="theme.width >= 1200 || editing_filters" id="story-filters">
+                <div class="col-md-4 col-sm-12" if.bind="theme.width >= 1200 || editing_filters" id="story-filters">
                     <div class="row" style="position:relative;">
                         <div style="margin-top: 0px;margin-bottom:2px;font-size:120%">${'stories.categories' & t}</div>
                         <help if.bind="phase == 'not-editing'" topic="tags" position="bottom" style="position:absolute;left:0px;top:26px;"></help>
