wip. search button or timeout

--- a/src/app.html
+++ b/src/app.html
@@ -29,10 +29,14 @@
             <div class="navbar-search">
                 <div class="search-box">
                     <label class="search-box-container">
-                        <input type="text" class="search-box-input" value.bind="keywords" t="[placeholder]enter-search-words" keydown.delegate="go_search() & debounce:1500" />
+                        <input type="text" 
+                            class="search-box-input"
+                            value.bind="keywords" t="[placeholder]enter-search-words" 
+                            keydown.delegate="go_search(event) & debounce:theme.search_debounce" />
                         <i class="far fa-times" click.trigger="clear_keywords()"></i>
                     </label>
-                    <button class="search-box-button" click.delegate="go_search(true)" if.bind="false">
+                    <button class="search-box-button" 
+                        click.delegate="go_search()">
                         <i class="far fa-search"></i>
                     </button>
                 </div>
