edit-filters label. photos in mobile.

--- a/src/stories/stories.html
+++ b/src/stories/stories.html
@@ -65,7 +65,7 @@
                     <button class="btn btn-basic btn-sm btn-framed" 
                         if.bind="theme.width<1200" 
                         click.delegate="show_filters_only()"
-                        style="margin-bottom:12px;margin-right:20px">${'photos.edit-filters' & t}
+                        style="margin-bottom:12px;margin-right:20px">${'stories.edit-filters' & t}
                     </button>
 
                     <form if.bind="!no_results" class="form-inline" style="margin-right:20px;margin-bottom:6px;">
