--- a/src/videos/videos.html
+++ b/src/videos/videos.html
@@ -12,7 +12,7 @@
                             <button class="btn btn-basic btn-sm btn-framed" 
                                 if.bind="theme.width<1200" 
                                 click.delegate="show_filters_only()"
-                                css="margin-${theme.other_dir}:6px;margin-${theme.same_dir}:-16px;">${'photos.edit-filters' & t}
+                                css="margin-${theme.other_dir}:6px;margin-${theme.same_dir}:-16px;">${'videos.edit-filters' & t}
                             </button>
                             <div class="input-group" style="width:240px;" >
                                 <search-input value.bind="filter" placeholder="videos.filter" height="30"></search-input>
