--- a/src/photos/photos.html
+++ b/src/photos/photos.html
@@ -46,6 +46,7 @@
                             </div>
                             <div class="form-group" if.bind="! editing_filters">
                                 <button class="btn btn-basic btn-sm btn-framed" 
+                                    style="margin-right:20px;margin-left:20px;"
                                     if.bind="theme.width<1200" 
                                     click.delegate="show_filters_only()">${'photos.edit-filters' & t}
                                 </button>
