--- a/src/stories/story-detail.html
+++ b/src/stories/story-detail.html
@@ -3,7 +3,7 @@
     <div css="margin-top:12px;margin-left:auto;margin-right:auto;min-height:${theme.min_height-120}px" class="container content-area">
         <div class="detail-header detail-header-modifier">
             <h3 style="float:left;cursor:pointer;padding:0;margin:0;">
-                <i class="far fa-share" style="cursor:pointer;" t="[title]go-back" click.trigger="go_back()" if.bind="theme.width >= 1200"></i>
+                <i class="far fa-share" style="cursor:pointer;" t="[title]go-back" click.trigger="go_back()" if.bind="theme.is_desktop"></i>
             </h3>
             <h3 dir="${story_dir}" style="float: right;margin:0px;">
                 ${story.name}<span if.bind="user.privileges.DEVELOPER">&nbsp;${story.id}</span>
