--- a/src/videos/videos.html
+++ b/src/videos/videos.html
@@ -10,14 +10,14 @@
                         </div>
                         <div class="col-md-10 col-md-offset-1 ctrls-group">
                             <button class="btn btn-basic btn-sm btn-framed" 
-                                if.bind="theme.width<1200" 
+                                if.bind="! theme.is_desktop" 
                                 click.delegate="show_filters_only()"
                                 css="margin-${theme.other_dir}:6px;margin-${theme.same_dir}:-16px;">${'videos.edit-filters' & t}
                             </button>
                             <div class="input-group" id="videos-name-search" >
                                 <search-input value.bind="filter" placeholder="videos.filter" height="30"></search-input>
                             </div>
-                            <div class="paging-buttons" dir="ltr" if.bind="theme.width < 1200">
+                            <div class="paging-buttons" dir="ltr" if.bind="! theme.is_desktop">
                                 <button t="[title]videos.prev" class="btn btn-default" click.delegate="page(-1, $event)" disabled.bind="prev_disabled"><i class="fas fa-chevron-left"></i></button>
                                 <button t="[title]videos.next" class="btn btn-default" click.delegate="page(+1, $event)" disabled.bind="next_disabled"><i class="fas fa-chevron-right"></i></button>
                             </div>
@@ -92,7 +92,7 @@
                     <div class="row" style="margin-bottom:15px;position:relative;">
                         <div style="margin-top: 0px;margin-bottom:2px;font-size:120%">${'stories.categories' & t}</div>
                         <help if.bind="phase=='photos-ready-to-edit'" topic="videos.ready-to-edit", position="bottom" style="position:absolute;left:2px;top:2px;"></help>
-                        <help if.bind="phase=='photos-not-editing'" id="video-help" topic="tags" position="${theme.width < 1200 ? 'right' : 'bottom'}"></help>
+                        <help if.bind="phase=='photos-not-editing'" id="video-help" topic="tags" position="${! theme.is_desktop ? 'right' : 'bottom'}"></help>
                         <multi-select options.bind="topic_list"
                             selected_options.bind="params.selected_topics"
                             settings.bind="options_settings"
