--- a/src/photos/full-size-photo.html
+++ b/src/photos/full-size-photo.html
@@ -3,7 +3,14 @@
     <div class="slide unselectable" click.delegate="mark_face($event)" id="full-size-photo" style="z-index:0;margin-left:32px;cursor:default;"
         interact-draggable.bind="theme.interact_setting"
         interact-dragmove.delegate="drag_move_photo($event)" >
-        <div class="slide full-size-photo" click.delegate="mark_face($event)" css="height: ${slide[slide.side].height}px; width:${slide[slide.side].width}px;">
+        <div class="slide full-size-photo" click.delegate="mark_face($event)" css="height: ${slide[slide.side].height}px; width:${slide[slide.side].width}px;position:relative;">
+            <div show.bind="cropping" 
+                css="height:${crop_height}px;width:${crop_width}px;position:absolute;top:${crop_top}px;left:${crop_left}px;opacity:0.5;background-color:grey;"
+                interact-draggable.bind="theme.interact_setting"
+                interact-dragmove.delegate="do_crop($event)"
+                interact-dragstart.delegate="start_crop($event)"
+                >
+            </div>
             <img src="${slide[slide.side].src}" height="${slide[slide.side].height}" width="${slide[slide.side].width}" />
             <help if.bind="!user.editing" topic="annnotated-photo" position="bottom" class="side-tool help"></help>
             <help if.bind="user.editing" topic="annnotated-photo-editing" position="bottom" class="side-tool help"></help>
@@ -14,6 +21,9 @@
             <button aubs-tooltip="text.bind:jump_to_story_page" class="side-tool story" click.trigger="jump_to_photo_page($event)"><i class="fa fa-lg fa-bars"></i></button>
             <button aubs-tooltip="text.bind:copy_photo_url_text" class="side-tool copy-to-clipboard" click.delegate="copy_photo_url()"><i class="fa fa-lg fa-link"></i></button>
             <button if.bind="slide.back" aubs-tooltip="text.bind:flip_text" class="side-tool flip-sides" click.delegate="flip_photo()"><i class="fa fa-lg fa-sync"></i></button>
+            <button show.bind="user.editing && ! cropping" aubs-tooltip="text.bind:crop" class="side-tool crop" click.delegate="crop_photo()"><i class="fa fa-lg fa-crop-alt"></i></button>
+            <button show.bind="cropping" aubs-tooltip="text.bind:save_crop" class="side-tool crop" click.delegate="save_photo_crop()"><i class="fa fa-lg fa-save"></i></button>
+            <button show.bind="cropping" aubs-tooltip="text.bind:cancel_crop" class="side-tool cancel-crop" click.delegate="cancel_photo_crop()"><i class="fa fa-lg fa-undo-alt"></i></button>
             <button dir="rtl" repeat.for="face of faces" click.trigger="handle_face(face, $event, $index)" interact-draggable.bind="theme.interact_setting"
                 class="face" 
                 id.bind="'face-' + face.member_id"
