--- a/src/photos/photo-detail.html
+++ b/src/photos/photo-detail.html
@@ -11,7 +11,7 @@
             <button id="word-highlighter" if.bind="keywords && keywords.length > 0 && ! user.editing"  
                 class="word-highlighter ${highlight_on}" click.trigger="toggle_highlight_on()" t="[title]stories.highlight-on">
             </button>
-            <chat-button chatroom_id.bind="chatroom_id" new-chatroom.delegate="create_chatroom()"></chat-button>
+            <chat-button chatroom_id.two-way="chatroom_id" new-chatroom.delegate="create_chatroom()"></chat-button>
         </div>
         <div class="row">
             <div class="col-md-7" style="display:flex;flex-direction:column;" id="photo-box">
