--- a/src/admin/customize.html
+++ b/src/admin/customize.html
@@ -8,27 +8,38 @@
         <ux-dialog-body>
             <div style="height:95%;margin-top:0px;">
                 <div class="row" style="display:flex;font-size:120%;">
-                    <div class="col-md-4">
+                    <div class="col-md-3">
                         ${'user.site-header' & t}
                     </div>
-                    <div class="col-md-8">
-                        <div class="form-group">
-                            <input type="text" class="form-control" style="font-size:115%" placeholder="App Title"
-                                value.bind="app_title">
-                        </div>
+                    <div class="col-md-7">
+                        <form class="form-inline">
+                            <div class="form-group">
+                                <input type="text" class="form-control" style="font-size:115%" placeholder="App Title"
+                                    value.bind="app_title">
+                            </div>
+                            <div class="form-group">
+                                <button class="btn btn-success" click.delegate="save_app_title()">
+                                    <i class="fas fa-save"></i>
+                                </button>
+                            </div>
+                        </form>
                     </div>
                 </div>
             </div>
             <div class="col-md-12">
+                <div>
+                    <h3 style="margin-right:-15px;margin-left:-15px;">${'user.customize-dictionary' & t}</h3>
+                </div>
                 <div class="row multi-select-div">
-                    <multi-select options.bind="key_value_list" settings.bind="options_settings"></multi-select>
+                    <multi-select options.bind="key_value_list" settings.bind="options_settings"
+                        name-changed.delegate="dic_item_changed($event)" place_holder_text="user.enter-text-to-replace">
                     </multi-select>
                 </div>
             </div>
         </ux-dialog-body>
-        <ux-dialog-footer>
+        <!-- <ux-dialog-footer>
             <button type="button" class="btn btn-primary" click.delegate="save()">${'members.save' & t}</button>
             <button type="button" class="btn btn-info" click.delegate="cancel()">${'members.cancel' & t}</button>
         </ux-dialog-footer>
-    </ux-dialog>
+    </ux-dialog> -->
 </template>
