--- a/src/stories/stories.html
+++ b/src/stories/stories.html
@@ -172,6 +172,14 @@
                             </select>
                         </form>
                     </div>
+                    <div class="row" style="margin-top: 20px;margin-left:23px;" if.bind="can_set_dates">
+                        <date-range 
+                            label="stories.date" 
+                            base_date_str.bind="params.stories_date_str"
+                            range_options.bind="[1,2,3,5,10, 20, 50, 100, 120]" 
+                            span_size.bind="params.stories_date_span_size">
+                        </date-range>
+                    </div>
                 </div>
             </div>
         </div>
