--- a/src/stories/story_window.html
+++ b/src/stories/story_window.html
@@ -31,20 +31,27 @@
                 </div>
             </div>
             <div class="big-story-panel fr-view" if.bind="edit">
-                <froala-editor value.two-way="story_text" config.bind="{
-                    iconsTemplate: 'font_awesome_5',
-                    toolbarButtons: ['undo', 'redo', '|', 'bold', 'italic', 'underline', '|', 'insertLink', 'insertImage', 'insertVideo', '|',
-                            'color', 'fontSize', 'align', 'html'],
-                    fontSize: ['8', '10', '12', '13', '14', '15', '16', '18', '36', '48', '60', '72', '96'],
-                    imageDefaultDisplay: 'inline',
-                    imageDefaultAlign: 'right',
-                    imageDefaultWidth: 100,
-                    videoDefaultDisplay: 'inline',
-                    videoDefaultAlign: 'left',
-                    VideoDefaultWidth: 160,
-                    charCounterCount: false,
-                    linkAlwaysBlank: true,
-                    language: 'he', heightMin: 400, heightMax: 400}">
+                <froala-editor 
+                    value.two-way="story_text" 
+                    config.bind="{
+                        iconsTemplate: 'font_awesome_5',
+                        toolbarButtons: ['undo', 'redo', '|', 'bold', 'italic', 'underline', '|', 'insertLink', 'insertImage', 'insertVideo', '|',
+                                'color', 'fontSize', 'align', 'html'],
+                        fontSize: ['8', '10', '12', '13', '14', '15', '16', '18', '36', '48', '60', '72', '96'],
+                        imageDefaultDisplay: 'inline',
+                        imageDefaultAlign: 'right',
+                        imageDefaultWidth: 100,
+                        videoDefaultDisplay: 'inline',
+                        videoDefaultAlign: 'left',
+                        VideoDefaultWidth: 160,
+                        charCounterCount: false,
+                        linkAlwaysBlank: true,
+                        language: 'he', heightMin: 400, heightMax: 400,
+                        uploadImageUrl: 'https://gbstories.org/gbs__test/static/pg_photos/embedded'
+                    }"
+                    event-handlers.bind="{
+                        'image.beforeUpload': beforeUpdate
+                    }">
                 </froala-editor>
             </div>
         </ux-dialog-body>
