no uploading to froala!

--- a/src/stories/story_window.html
+++ b/src/stories/story_window.html
@@ -47,10 +47,7 @@
                         charCounterCount: false,
                         linkAlwaysBlank: true,
                         language: 'he', heightMin: 400, heightMax: 400,
-                        uploadImageUrl: 'https://gbstories.org/gbs__test/static/pg_photos/embedded'
-                    }"
-                    event-handlers.bind="{
-                        'image.beforeUpload': beforeUpdate
+                        imageUploadRemoteUrls: false
                     }">
                 </froala-editor>
             </div>
