--- a/src/stories/stories.html
+++ b/src/stories/stories.html
@@ -35,7 +35,7 @@
                                 </button>
                             </div>
                             <div class="form-group">
-                                <button if.bind="user.editing && checked_stories.size > 0 && params.selected_topics.length>0"
+                                <button if.bind="user.editing && checked_stories.size > 0 && (params.selected_topics.length>0 || date_is_valid)"
                                     click.trigger="apply_topics_to_selected_stories()"
                                     class="btn btn-basic btn-md">
                                     ${'stories.apply-to-selected' & t}
