--- a/src/stories/stories.html
+++ b/src/stories/stories.html
@@ -182,6 +182,9 @@
                     </div>
                 </div>
             </div>
+            <div class="row hide-if-small" style="width:100%;margin-right:5px;" if.bind="!can_set_dates">
+                <timeline first_year.bind="params.first_year" last_year.bind="params.last_year" change.delegate="time_range_changed($event)"></timeline>
+            </div>
         </div>
     </section>
 </template>
