--- a/src/photos/photos.html
+++ b/src/photos/photos.html
@@ -3,9 +3,12 @@
         <div class="row content-area" id="photos-area" dir="${theme.rtltr}">
             <div class="row" style="margin-right:0;margin-left:0;">
                 <div class="col-md-1 hide-if-small" css="padding-top: 40px;position:relative">
-                    <span css="position:absolute"></help>${'photos.more-smaller' & t}<help topic="photos.slider" position="right"></span>
-                    <input type="range" id="range" min="4" max="32" step="1" change.trigger="slider_changed()" value.bind="photos_per_line" />
-                    <span css="position:absolute">${'photos.larger' & t}</span>
+                    <span style="position:absolute">${'photos.more-smaller' & t}<help topic="photos.slider" position="right"></help></span>
+                    <input type="range" min="4" max="32" step="1"
+                        change.trigger="slider_changed()" value.bind="photos_per_line" 
+                        style="position:absolute;top:82px;left:4px;"
+                        class="range vertical-lowest-first round" />
+                    <span style="position:absolute;top:150px">${'photos.larger' & t}</span>
                 </div>
                 <div class="col-md-8">
                     <div class="row" style="margin-bottom:15px;padding-right:15px;">
