make timeline unselectable

--- a/src/resources/elements/timeline.html
+++ b/src/resources/elements/timeline.html
@@ -1,4 +1,4 @@
-<template>
+<template class="unselectable">
     <require from="./timeline.css"></require>
     <div css="width: ${timeline_width}px;position:relative;">
         <span style="float:right;position:absolute;top:-30px;font-size:130%;">
