--- a/src/resources/elements/date-range.html
+++ b/src/resources/elements/date-range.html
@@ -1,18 +1,18 @@
 <template>
-    <form class="form-inline date-range" dir="${theme.rtltr}" style="position:relative;height:34px;" onsubmit="return false;">
-        <label if.bind="show_label" style="padding-right:6px;">${label & t}</label>
-        <div if.bind="show_edit_end_date" class="form-group" style="margin-right:0px;position:absolute;top:0;left:87px; ">
+    <form class="form-inline date-range" dir="${theme.rtltr}" style="position:relative1;height:34px;" onsubmit="return false;">
+        <label if.bind="show_label">${label & t}</label>
+        <div if.bind="show_edit_end_date" class="form-group" style="margin-right:0px;position:absolute1;top:0;left:87px;float:left; ">
             <select value.bind="span_size" style="height:1.8em;color:black;width:74px;" change.delegate="span_size_changed($event)">
                 <option repeat.for="option of end_date_options" model.bind="option.value">${option.name}</option>
             </select>
         </div>
         <div if.bind="!show_edit_end_date" class="form-group" style="margin-right:0px;width:5em; "></div>
  
-        <div class="form-group" if.bind="show_edit_end_date" style="margin-right:0px;width:1em;position:absolute;top:0;left:73px;">
-            <span style="padding:0;margin:0;">-</span>
+        <div class="form-group" if.bind="show_edit_end_date" style="margin-right:0px;float:left;top:0;">
+            <span style="padding:0;margin:0;float:left;">-</span>
         </div>
 
-        <div if.bind="user.editing" class="form-group" style="margin-right:0px;width:61px;position:absolute;top:0;left:0;">
+        <div if.bind="user.editing" class="form-group" style="margin-right:0px;width:61px;position:absolute1;float:left;top:0;left:0;">
             <input type="text" value.bind="base_date_str" maxlength="10"
                 title.bind="hint" 
                 style="width:80px;padding-left:4px;padding-right:0;color:black;direction:ltr;margin-right:-18px;" 
