--- a/src/photos/photos.html
+++ b/src/photos/photos.html
@@ -12,7 +12,7 @@
                 </div>
                 <div class="col-md-8">
                     <div class="row" style="margin-bottom:15px;padding-right:15px;">
-                        <form class="form-inline">
+                        <form style="display:flex;height:34px;">
                             <div class="input-group" if.bind="user.privileges.ADVANCED  && params.selected_order_option == 'random-order'">
                                 <search-input value.bind="filter" placeholder="photos.filter" height="32"></search-input>
                             </div>
