--- a/src/terms/terms.html
+++ b/src/terms/terms.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-md-8" id="terms-list-header">
                     <div class="row" style="margin-bottom:15px;" if.bind="theme.is_desktop">
-                        <form class="form-inline">
+                        <form style="display:flex;" class="fast-term-search">
                             <div class="input-group" style="width:236px;">
                                 <search-input value.bind="filter" change.delegate="update_story_list()" if.bind="theme.is_desktop"
                                     placeholder="terms.filter" help_topic="terms-help" height="38"></search-input>
